fixed the wrapper component to wrap the images horizontally.

--- a/src/components/corousal/ImageContainer/ImageContainer.module.css
+++ b/src/components/corousal/ImageContainer/ImageContainer.module.css
@@ -1,6 +1,6 @@
 .ImageContainer{
     position: relative;
-    width: 100%;
+    width: 100vw;
     height: 300px;
     padding-top: 80px;
     border-radius: 25px;
@@ -11,6 +11,6 @@
 @media (min-width: 500px) {
     .ImageContainer{
         padding-top: 10px;
-        height: 600px;
+        height: 700px;
     }
 }
