--- a/src/components/corousal/ImagesWrapper/ImagesWrapper.module.css
+++ b/src/components/corousal/ImagesWrapper/ImagesWrapper.module.css
@@ -1,6 +1,5 @@
 .ImagesWrapper{
-    position: absolute;
-    height: 100%;
+    width: fit-content;
     display: flex;
     flex-direction: row;
     transition: 500ms ease;
